ADD: surge control main, surge control edit

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -1,1 +1,27 @@
-umps.useridandpassword.notempty=User ID and Password can't empty.
+umps.adminfunc.common.cancel=Cancel
+umps.adminfunc.common.backtoeditconfig=Back to Edit Configuration
+
+umps.useridandpassword.notempty=User ID and Password can't empty.umps.useridandpassword.notempty
+
+umps.adminfunc.surgecontrol.footer.remark=Remark:
+umps.adminfunc.surgecontrol.footer.gst.title=GST
+umps.adminfunc.surgecontrol.footer.gst.message=Number of service tickets assigned in the dedicated ticket pool of an online service
+umps.adminfunc.surgecontrol.footer.mst.title=MST
+umps.adminfunc.surgecontrol.footer.mst.message=Maximum number of service tickets to be deployed for an online service
+umps.adminfunc.surgecontrol.footer.priority.title=Priority
+umps.adminfunc.surgecontrol.footer.priority.message=The ordering of the items(1 is highest)
+umps.adminfunc.surgecontrol.footer.clawback.title=Clawback
+umps.adminfunc.surgecontrol.footer.clawback.message=Retrieve tickets from applications with lower priority when the share ticket pool is full
+
+umps.adminfunc.surgecontrol.main.search.title=Search Criteria
+umps.adminfunc.surgecontrol.main.search.btn=Search
+umps.adminfunc.surgecontrol.main.appid=App ID
+umps.adminfunc.surgecontrol.main.gst=GST
+umps.adminfunc.surgecontrol.main.desc=Description
+umps.adminfunc.surgecontrol.main.mst=MST
+umps.adminfunc.surgecontrol.main.priority=Priority
+umps.adminfunc.surgecontrol.main.clawback=Clawback
+
+umps.adminfunc.surgecontrol.update.message=Surge Control Configuration had beed updated.
+
+
