MOD: access control global API integration

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -5,6 +5,13 @@ umps.adminfunc.common.backtoeditconfig=Back to Edit Configuration
 umps.useridandpassword.notempty=User ID and Password can't empty.
 web.auth.nopermission=Permission Denied
 
+umps.adminfunc.accesscontrol.global.whitelist=Whitelist
+umps.adminfunc.accesscontrol.global.blacklist=Blacklist
+umps.adminfunc.accesscontrol.global.counterblocking=Counter Blocking
+umps.adminfunc.accesscontrol.global.maxNumOfTran=Maximum No. of Transactions Allowed
+umps.adminfunc.accesscontrol.global.tranNumOfDay=No. of Days for Counting the Accumulated Transactions
+umps.adminfunc.accesscontrol.global.maxNumOfAppoint=Maximum No. of Appointments Allowed
+umps.adminfunc.accesscontrol.global.appointNumOfDay=No. of Days for Counting the Accumulated Appointments
 
 umps.adminfunc.surgecontrol.footer.remark=Remark:
 umps.adminfunc.surgecontrol.footer.gst.title=GST
