ADD: access control global update

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -1,10 +1,13 @@
-
+umps.adminfunc.common.save=Save
 umps.adminfunc.common.cancel=Cancel
 umps.adminfunc.common.backtoeditconfig=Back to Edit Configuration
+umps.adminfunc.common.enabled=Enabled
+umps.adminfunc.common.disabled=Disabled
 
 umps.useridandpassword.notempty=User ID and Password can't empty.
 web.auth.nopermission=Permission Denied
 
+umps.adminfunc.accesscontrol.backToAccessControl=Back to Access Control
 umps.adminfunc.accesscontrol.global.whitelist=Whitelist
 umps.adminfunc.accesscontrol.global.blacklist=Blacklist
 umps.adminfunc.accesscontrol.global.counterblocking=Counter Blocking
@@ -12,6 +15,11 @@ umps.adminfunc.accesscontrol.global.maxNumOfTran=Maximum No. of Transactions All
 umps.adminfunc.accesscontrol.global.tranNumOfDay=No. of Days for Counting the Accumulated Transactions
 umps.adminfunc.accesscontrol.global.maxNumOfAppoint=Maximum No. of Appointments Allowed
 umps.adminfunc.accesscontrol.global.appointNumOfDay=No. of Days for Counting the Accumulated Appointments
+umps.adminfunc.accesscontrol.global.success.message=The changes is saved.
+umps.adminfunc.accesscontrol.global.success.maxNumOfTran=Number of Transactions
+umps.adminfunc.accesscontrol.global.success.tranNumOfDay=Number of Days for Transactions
+umps.adminfunc.accesscontrol.global.success.maxNumOfAppoint=Number of Appointments
+umps.adminfunc.accesscontrol.global.success.appointNumOfDay=No. of Days for Appointments
 
 umps.adminfunc.surgecontrol.footer.remark=Remark:
 umps.adminfunc.surgecontrol.footer.gst.title=GST
