FIX: exit button on layout page FIX: menu linkage to corresponding page FIX: added main menu shadow FIX: incorrect routing path in access control MOD: menu page i18n

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -7,6 +7,34 @@ umps.adminfunc.common.disabled=Disabled
 umps.useridandpassword.notempty=User ID and Password can't empty.
 web.auth.nopermission=Permission Denied
 
+umps.adminfunc.nav.eservices2=e-Services-2
+umps.adminfunc.nav.smartics2=SMARTICS-2
+umps.adminfunc.nav.rm=RM
+umps.adminfunc.nav.exit=Exit
+umps.adminfunc.nav.enquiry=Enquiry
+umps.adminfunc.nav.maintenance=Maintenance
+umps.adminfunc.nav.management=Management
+
+umps.adminfunc.func.eservices2.enquiry.applicationfeeenquiry=Application Fee Enquiry
+umps.adminfunc.func.eservices2.enquiry.systemholidayview=System Holiday View
+umps.adminfunc.func.eservices2.enquiry.schedulejobview=Schedule Job View
+umps.adminfunc.func.eservices2.enquiry.schedulejobviewhistory=Schedule Job View History
+umps.adminfunc.func.eservices2.maintenance.importantannouncement=Important Announcement
+umps.adminfunc.func.eservices2.maintenance.surgecontrol=Surge Control
+umps.adminfunc.func.eservices2.maintenance.accesscontrol=Access Control
+umps.adminfunc.func.eservices2.maintenance.auditlog=Audit Log
+umps.adminfunc.func.eservices2.maintenance.schedulejob=Schedule Job
+umps.adminfunc.func.eservices2.management.createfuncgroup=Create Function Group
+umps.adminfunc.func.eservices2.management.updatefuncgroup=Update Function Group
+umps.adminfunc.func.eservices2.management.deletefuncgroup=Delete Function Group
+
+umps.adminfunc.func.smartics2.enquiry.appointmentbookingenquiry=Appointment Booking Enquiry
+umps.adminfunc.func.smartics2.enquiry.onlinesubmissionenquiry=Online Submission Enquiry
+umps.adminfunc.func.smartics2.enquiry.enquirycode=Enquiry Code
+umps.adminfunc.func.smartics2.maintenance.deleteappointment=Delete Appointment
+
+umps.adminfunc.func.rm.enquiry.onlinesubmissionenquiry=Online Submission Enquiry
+
 umps.adminfunc.accesscontrol.backToAccessControl=Back to Access Control
 umps.adminfunc.accesscontrol.global.whitelist=Whitelist
 umps.adminfunc.accesscontrol.global.blacklist=Blacklist
