ADD: Schedule Job View, Schedule Job, Schedule Job View History MOD: layout padding

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -3,6 +3,8 @@ umps.adminfunc.common.cancel=Cancel
 umps.adminfunc.common.backtoeditconfig=Back to Edit Configuration
 umps.adminfunc.common.enabled=Enabled
 umps.adminfunc.common.disabled=Disabled
+umps.adminfunc.common.searchCriteria=Search Criteria
+umps.adminfunc.common.search=Search
 
 umps.useridandpassword.notempty=User ID and Password can't empty.
 web.auth.nopermission=Permission Denied
@@ -74,6 +76,17 @@ umps.adminfunc.surgecontrol.main.desc=Description
 umps.adminfunc.surgecontrol.main.mst=MST
 umps.adminfunc.surgecontrol.main.priority=Priority
 umps.adminfunc.surgecontrol.main.clawback=Clawback
+
+
+umps.adminfunc.schedulejob.view.search.field.jobname=Job Name
+umps.adminfunc.schedulejob.view.search.field.cronexpression=Cron Expression
+umps.adminfunc.schedulejob.view.search.field.datamap=Data Map
+umps.adminfunc.schedulejob.view.search.field.laststatus=Last Status
+umps.adminfunc.schedulejob.view.search.field.lastExecutionTime=Last Execution Time
+umps.adminfunc.schedulejob.view.search.field.nextExecutionTime=Next Execution Time
+umps.adminfunc.schedulejob.view.search.select.success=Success
+umps.adminfunc.schedulejob.view.search.select.failed=Failed
+umps.adminfunc.schedulejob.view.search.select.running=Running
 
 umps.adminfunc.surgecontrol.update.message=Surge Control Configuration had beed updated.
 
