--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -1,10 +1,13 @@
 umps.adminfunc.common.save=Save
 umps.adminfunc.common.cancel=Cancel
+umps.adminfunc.common.create=Create
 umps.adminfunc.common.backtoeditconfig=Back to Edit Configuration
 umps.adminfunc.common.enabled=Enabled
 umps.adminfunc.common.disabled=Disabled
 umps.adminfunc.common.searchCriteria=Search Criteria
 umps.adminfunc.common.search=Search
+umps.adminfunc.common.searchResult=Search Result
+umps.adminfunc.common.backToSearchCriteria=Back to Search Criteria
 
 umps.useridandpassword.notempty=User ID and Password can't empty.
 web.auth.nopermission=Permission Denied
@@ -87,6 +90,17 @@ umps.adminfunc.schedulejob.view.search.field.nextExecutionTime=Next Execution Ti
 umps.adminfunc.schedulejob.view.search.select.success=Success
 umps.adminfunc.schedulejob.view.search.select.failed=Failed
 umps.adminfunc.schedulejob.view.search.select.running=Running
+
+umps.adminfunc.schedulejob.view.history.search.field.jobname=Job Name
+umps.adminfunc.schedulejob.view.history.search.field.status=Status
+umps.adminfunc.schedulejob.view.history.search.field.startTime=Start Time
+umps.adminfunc.schedulejob.view.history.search.field.endTime=End Time
+umps.adminfunc.schedulejob.view.history.search.select.success=Success
+umps.adminfunc.schedulejob.view.history.search.select.failed=Failed
+umps.adminfunc.schedulejob.view.history.search.select.running=Running
+
+umps.adminfunc.schedulejob.newScheduleJob=New Schedule Job
+umps.adminfunc.schedulejob.createJob=Create Job
 
 umps.adminfunc.surgecontrol.update.message=Surge Control Configuration had beed updated.
 
