ADD: Schedule Job View pagination

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -8,6 +8,8 @@ umps.adminfunc.common.searchCriteria=Search Criteria
 umps.adminfunc.common.search=Search
 umps.adminfunc.common.searchResult=Search Result
 umps.adminfunc.common.backToSearchCriteria=Back to Search Criteria
+umps.adminfunc.common.pagination.recordPerPage=Records Per Page
+umps.adminfunc.common.pagination.pageNo=Page No
 
 umps.useridandpassword.notempty=User ID and Password can't empty.
 web.auth.nopermission=Permission Denied
