MOD: Access Control Data Grid MOD: Schedule Job

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -1,6 +1,7 @@
 umps.adminfunc.common.save=Save
 umps.adminfunc.common.cancel=Cancel
 umps.adminfunc.common.create=Create
+umps.adminfunc.common.back=Back
 umps.adminfunc.common.backtoeditconfig=Back to Edit Configuration
 umps.adminfunc.common.enabled=Enabled
 umps.adminfunc.common.disabled=Disabled
@@ -10,6 +11,8 @@ umps.adminfunc.common.searchResult=Search Result
 umps.adminfunc.common.backToSearchCriteria=Back to Search Criteria
 umps.adminfunc.common.pagination.recordPerPage=Records Per Page
 umps.adminfunc.common.pagination.pageNo=Page No
+umps.adminfunc.common.itemSaved=The item is saved.
+umps.adminfunc.common.itemCreated=The item is created.
 
 umps.useridandpassword.notempty=User ID and Password can't empty.
 web.auth.nopermission=Permission Denied
@@ -81,9 +84,12 @@ umps.adminfunc.surgecontrol.main.desc=Description
 umps.adminfunc.surgecontrol.main.mst=MST
 umps.adminfunc.surgecontrol.main.priority=Priority
 umps.adminfunc.surgecontrol.main.clawback=Clawback
+umps.adminfunc.surgecontrol.main.editConfig=Edit Configuration
+umps.adminfunc.surgecontrol.main.showHistData=Show Historical Data
 
 
 umps.adminfunc.schedulejob.view.search.field.jobname=Job Name
+umps.adminfunc.schedulejob.view.search.field.jobClass=Job Class
 umps.adminfunc.schedulejob.view.search.field.cronexpression=Cron Expression
 umps.adminfunc.schedulejob.view.search.field.datamap=Data Map
 umps.adminfunc.schedulejob.view.search.field.laststatus=Last Status
