ADD: Audit Log search & result

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -87,6 +87,10 @@ umps.adminfunc.surgecontrol.main.clawback=Clawback
 umps.adminfunc.surgecontrol.main.editConfig=Edit Configuration
 umps.adminfunc.surgecontrol.main.showHistData=Show Historical Data
 
+umps.adminfunc.schedulejob.view.search.field.funcName=Function Name
+umps.adminfunc.schedulejob.view.search.field.userId=User ID
+umps.adminfunc.schedulejob.view.search.field.startDate=Start Date
+umps.adminfunc.schedulejob.view.search.field.endDate=End Date
 
 umps.adminfunc.schedulejob.view.search.field.jobname=Job Name
 umps.adminfunc.schedulejob.view.search.field.jobClass=Job Class
