ADD: Create function group, Update function group, Delete function group

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -1,12 +1,14 @@
 umps.adminfunc.common.save=Save
 umps.adminfunc.common.cancel=Cancel
 umps.adminfunc.common.create=Create
+umps.adminfunc.common.confirm=Confirm
 umps.adminfunc.common.back=Back
 umps.adminfunc.common.backtoeditconfig=Back to Edit Configuration
 umps.adminfunc.common.enabled=Enabled
 umps.adminfunc.common.disabled=Disabled
 umps.adminfunc.common.searchCriteria=Search Criteria
 umps.adminfunc.common.search=Search
+umps.adminfunc.common.print=Print
 umps.adminfunc.common.searchResult=Search Result
 umps.adminfunc.common.backToSearchCriteria=Back to Search Criteria
 umps.adminfunc.common.pagination.recordPerPage=Records Per Page
@@ -34,9 +36,24 @@ umps.adminfunc.func.eservices2.maintenance.surgecontrol=Surge Control
 umps.adminfunc.func.eservices2.maintenance.accesscontrol=Access Control
 umps.adminfunc.func.eservices2.maintenance.auditlog=Audit Log
 umps.adminfunc.func.eservices2.maintenance.schedulejob=Schedule Job
+
 umps.adminfunc.func.eservices2.management.createfuncgroup=Create Function Group
 umps.adminfunc.func.eservices2.management.updatefuncgroup=Update Function Group
 umps.adminfunc.func.eservices2.management.deletefuncgroup=Delete Function Group
+
+umps.adminfunc.func.eservices2.management.func.funcGroupId=Function Group ID
+umps.adminfunc.func.eservices2.management.func.description=Description
+umps.adminfunc.func.eservices2.management.func.currFunc=Current Functions
+umps.adminfunc.func.eservices2.management.func.availableFunc=Available Functions
+umps.adminfunc.func.eservices2.management.func.title=Functions
+umps.adminfunc.func.eservices2.management.func.detail=Detail
+umps.adminfunc.func.eservices2.management.func.createSuccess=Function Group has been created successfully
+umps.adminfunc.func.eservices2.management.func.updateSuccess=Function Group has been updated successfully
+umps.adminfunc.func.eservices2.management.func.deleteSuccess=Function Group has been deleted successfully
+umps.adminfunc.func.eservices2.management.func.searchFuncGrp=Search Function Group Function Group ID
+umps.adminfunc.func.eservices2.management.func.user=Users
+umps.adminfunc.func.eservices2.management.func.userAssigned=User Assigned
+umps.adminfunc.func.eservices2.management.func.availableUser=Available Users
 
 umps.adminfunc.func.smartics2.enquiry.appointmentbookingenquiry=Appointment Booking Enquiry
 umps.adminfunc.func.smartics2.enquiry.onlinesubmissionenquiry=Online Submission Enquiry
