ADD: Appointment Booking Enquiry, Smartics2 & RM Online Submission Enquiry

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -131,6 +131,17 @@ umps.adminfunc.schedulejob.view.history.search.select.running=Running
 umps.adminfunc.schedulejob.newScheduleJob=New Schedule Job
 umps.adminfunc.schedulejob.createJob=Create Job
 
+umps.adminfunc.appointmentEnquiry.byOffice=1. By Office and Date (For specific office and date)
+umps.adminfunc.appointmentEnquiry.byApplicantID=2. By Applicant ID
+umps.adminfunc.appointmentEnquiry.byAppointmentType=3. By Appointment Type and Date (For all offices)
+umps.adminfunc.appointmentEnquiry.office=Office
+umps.adminfunc.appointmentEnquiry.AppointmentType=Appointment Type
+umps.adminfunc.appointmentEnquiry.date=Date
+umps.adminfunc.appointmentEnquiry.hkic=HKIC or T/D No
+umps.adminfunc.appointmentEnquiry.trn=TRN
+umps.adminfunc.appointmentEnquiry.startDate=Start Date
+umps.adminfunc.appointmentEnquiry.endDate=End Date
+
 umps.adminfunc.surgecontrol.update.message=Surge Control Configuration had beed updated.
 
 
