ADD: Appointment Booking Enquiry: Office, Applicant ID, Appointment

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -4,13 +4,15 @@ umps.adminfunc.common.create=Create
 umps.adminfunc.common.confirm=Confirm
 umps.adminfunc.common.back=Back
 umps.adminfunc.common.backtoeditconfig=Back to Edit Configuration
+umps.adminfunc.common.backToSearchCriteria=Back to Search Criteria
+umps.adminfunc.common.backToPreviousPage=Back to Previous Page
 umps.adminfunc.common.enabled=Enabled
 umps.adminfunc.common.disabled=Disabled
 umps.adminfunc.common.searchCriteria=Search Criteria
 umps.adminfunc.common.search=Search
 umps.adminfunc.common.print=Print
+umps.adminfunc.common.printThisPage=Print this page
 umps.adminfunc.common.searchResult=Search Result
-umps.adminfunc.common.backToSearchCriteria=Back to Search Criteria
 umps.adminfunc.common.pagination.recordPerPage=Records Per Page
 umps.adminfunc.common.pagination.pageNo=Page No
 umps.adminfunc.common.itemSaved=The item is saved.
@@ -138,9 +140,27 @@ umps.adminfunc.appointmentEnquiry.office=Office
 umps.adminfunc.appointmentEnquiry.AppointmentType=Appointment Type
 umps.adminfunc.appointmentEnquiry.date=Date
 umps.adminfunc.appointmentEnquiry.hkic=HKIC or T/D No
+umps.adminfunc.appointmentEnquiry.applicantID=Applicant ID
 umps.adminfunc.appointmentEnquiry.trn=TRN
 umps.adminfunc.appointmentEnquiry.startDate=Start Date
 umps.adminfunc.appointmentEnquiry.endDate=End Date
+umps.adminfunc.appointmentEnquiry.details=Details
+umps.adminfunc.appointmentEnquiry.footer.appointmentType=Appointment Type:
+umps.adminfunc.appointmentEnquiry.footer.ropBooking=ROPbooking
+umps.adminfunc.appointmentEnquiry.footer.sidccBooking=SIDCCbooking
+umps.adminfunc.appointmentEnquiry.footer.crpBooking=CRPbooking
+umps.adminfunc.appointmentEnquiry.footer.ropDesc=ROP Appointment Booking & Form Pre-fill
+umps.adminfunc.appointmentEnquiry.footer.sidccDesc=SIDCC Appointment Booking & Form Pre-fill
+umps.adminfunc.appointmentEnquiry.footer.crpDesc=CRP Appointment Booking & Submit Necessary Information
+umps.adminfunc.appointmentEnquiry.footer.channelType=Channel Type:
+umps.adminfunc.appointmentEnquiry.footer.admin=Admin
+umps.adminfunc.appointmentEnquiry.footer.ivrs=IVRS
+umps.adminfunc.appointmentEnquiry.footer.interface=Interface
+umps.adminfunc.appointmentEnquiry.footer.web=Web application and Mobile App
+umps.adminfunc.appointmentEnquiry.footer.a=A
+umps.adminfunc.appointmentEnquiry.footer.i=I
+umps.adminfunc.appointmentEnquiry.footer.t=T
+umps.adminfunc.appointmentEnquiry.footer.w=W
 
 umps.adminfunc.surgecontrol.update.message=Surge Control Configuration had beed updated.
 
