ADD: Appointment Booking Enquiry applicant detail ADD: IVRS

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -38,6 +38,7 @@ umps.adminfunc.func.eservices2.maintenance.surgecontrol=Surge Control
 umps.adminfunc.func.eservices2.maintenance.accesscontrol=Access Control
 umps.adminfunc.func.eservices2.maintenance.auditlog=Audit Log
 umps.adminfunc.func.eservices2.maintenance.schedulejob=Schedule Job
+umps.adminfunc.func.eservices2.maintenance.ivrs=IVRS
 
 umps.adminfunc.func.eservices2.management.createfuncgroup=Create Function Group
 umps.adminfunc.func.eservices2.management.updatefuncgroup=Update Function Group
@@ -145,6 +146,7 @@ umps.adminfunc.appointmentEnquiry.trn=TRN
 umps.adminfunc.appointmentEnquiry.startDate=Start Date
 umps.adminfunc.appointmentEnquiry.endDate=End Date
 umps.adminfunc.appointmentEnquiry.details=Details
+umps.adminfunc.appointmentEnquiry.history=History
 umps.adminfunc.appointmentEnquiry.footer.appointmentType=Appointment Type:
 umps.adminfunc.appointmentEnquiry.footer.ropBooking=ROPbooking
 umps.adminfunc.appointmentEnquiry.footer.sidccBooking=SIDCCbooking
