ADD: Online Submission

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -164,7 +164,19 @@ umps.adminfunc.appointmentEnquiry.footer.i=I
 umps.adminfunc.appointmentEnquiry.footer.t=T
 umps.adminfunc.appointmentEnquiry.footer.w=W
 
-umps.adminfunc.surgecontrol.update.message=Surge Control Configuration had beed updated.
+umps.adminfunc.onlineSubmission.TRN=TRN
+umps.adminfunc.onlineSubmission.ARN=ARN
+umps.adminfunc.onlineSubmission.start=Start
+umps.adminfunc.onlineSubmission.end=End
+umps.adminfunc.onlineSubmission.applicantID=Applicant ID
+umps.adminfunc.onlineSubmission.hkic=(HKIC, T/D or latest ARN)
+umps.adminfunc.onlineSubmission.applicationType=Application Type
+umps.adminfunc.onlineSubmission.reportNo=Report No.
+umps.adminfunc.onlineSubmission.hkicExample=(e.g. HKIC: A123456(7), Enter A1234567)
+umps.adminfunc.onlineSubmission.tdExample=(e.g. T/D No: XY123456, Enter XY123456)
+umps.adminfunc.onlineSubmission.arnExample=(e.g. latest ARN: ABCD-1234567-12, Enter ABCD123456712)
+
+umps.adminfunc.surgecontrol.update.message=Surge Control Configuration had been updated.
 
 
 
