ADD: Enquiry Code Information MOD: Appointment Booking Enquiry data grid footer

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -60,7 +60,7 @@ umps.adminfunc.func.eservices2.management.func.availableUser=Available Users
 
 umps.adminfunc.func.smartics2.enquiry.appointmentbookingenquiry=Appointment Booking Enquiry
 umps.adminfunc.func.smartics2.enquiry.onlinesubmissionenquiry=Online Submission Enquiry
-umps.adminfunc.func.smartics2.enquiry.enquirycode=Enquiry Code
+umps.adminfunc.func.smartics2.enquiry.enquirycode=Enquiry Code Information
 umps.adminfunc.func.smartics2.maintenance.deleteappointment=Delete Appointment
 
 umps.adminfunc.func.rm.enquiry.onlinesubmissionenquiry=Online Submission Enquiry
@@ -175,6 +175,14 @@ umps.adminfunc.onlineSubmission.reportNo=Report No.
 umps.adminfunc.onlineSubmission.hkicExample=(e.g. HKIC: A123456(7), Enter A1234567)
 umps.adminfunc.onlineSubmission.tdExample=(e.g. T/D No: XY123456, Enter XY123456)
 umps.adminfunc.onlineSubmission.arnExample=(e.g. latest ARN: ABCD-1234567-12, Enter ABCD123456712)
+
+umps.adminfunc.enquiryCodeInfo.appointmentType=Appointment Type
+umps.adminfunc.enquiryCodeInfo.hkic=HKIC
+umps.adminfunc.enquiryCodeInfo.tdNo=T/D No.
+umps.adminfunc.enquiryCodeInfo.dob=DOB
+umps.adminfunc.enquiryCodeInfo.day=Day
+umps.adminfunc.enquiryCodeInfo.month=Month
+umps.adminfunc.enquiryCodeInfo.year=Year
 
 umps.adminfunc.surgecontrol.update.message=Surge Control Configuration had been updated.
 
