ADD: Delete Appointment

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -184,6 +184,14 @@ umps.adminfunc.enquiryCodeInfo.day=Day
 umps.adminfunc.enquiryCodeInfo.month=Month
 umps.adminfunc.enquiryCodeInfo.year=Year
 
+umps.adminfunc.deleteAppointment.applicantID=Applicant ID
+umps.adminfunc.deleteAppointment.hkic=(HKIC, T/D or latest ARN)
+umps.adminfunc.deleteAppointment.AppointmentType=Appointment Type
+umps.adminfunc.deleteAppointment.hkicExample=(e.g. HKIC: A123456(7), Enter A1234567)
+umps.adminfunc.deleteAppointment.tdExample=(e.g. T/D No: XY123456, Enter XY123456)
+umps.adminfunc.deleteAppointment.arnExample=(e.g. latest ARN: ABCD-1234567-12, Enter ABCD123456712)
+umps.adminfunc.deleteAppointment.deleteSuccess=Appointments have been deleted successfully
+
 umps.adminfunc.surgecontrol.update.message=Surge Control Configuration had been updated.
 
 
