--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -2,6 +2,7 @@ umps.adminfunc.common.save=Save
 umps.adminfunc.common.cancel=Cancel
 umps.adminfunc.common.create=Create
 umps.adminfunc.common.confirm=Confirm
+umps.adminfunc.common.update=Update
 umps.adminfunc.common.back=Back
 umps.adminfunc.common.backtoeditconfig=Back to Edit Configuration
 umps.adminfunc.common.backToSearchCriteria=Back to Search Criteria
@@ -17,6 +18,13 @@ umps.adminfunc.common.pagination.recordPerPage=Records Per Page
 umps.adminfunc.common.pagination.pageNo=Page No
 umps.adminfunc.common.itemSaved=The item is saved.
 umps.adminfunc.common.itemCreated=The item is created.
+umps.adminfunc.common.selectAll=Select All
+
+
+umps.adminfunc.lang.eng=English
+umps.adminfunc.lang.tradChin=Traditional Chinese
+umps.adminfunc.lang.simpChin=Simplified Chinese
+
 
 umps.useridandpassword.notempty=User ID and Password can't empty.
 web.auth.nopermission=Permission Denied
@@ -107,6 +115,8 @@ umps.adminfunc.surgecontrol.main.clawback=Clawback
 umps.adminfunc.surgecontrol.main.editConfig=Edit Configuration
 umps.adminfunc.surgecontrol.main.showHistData=Show Historical Data
 
+umps.adminfunc.surgecontrol.update.message=Surge Control Configuration had been updated.
+
 umps.adminfunc.schedulejob.view.search.field.funcName=Function Name
 umps.adminfunc.schedulejob.view.search.field.userId=User ID
 umps.adminfunc.schedulejob.view.search.field.startDate=Start Date
@@ -192,7 +202,46 @@ umps.adminfunc.deleteAppointment.tdExample=(e.g. T/D No: XY123456, Enter XY12345
 umps.adminfunc.deleteAppointment.arnExample=(e.g. latest ARN: ABCD-1234567-12, Enter ABCD123456712)
 umps.adminfunc.deleteAppointment.deleteSuccess=Appointments have been deleted successfully
 
-umps.adminfunc.surgecontrol.update.message=Surge Control Configuration had been updated.
 
+umps.adminfunc.importantAnnouncement.backToImportantAnnt=Back to Important Announcement
+umps.adminfunc.importantAnnouncement.templateSaved=The Template had be saved.
+umps.adminfunc.importantAnnouncement.anntSaved=The announcement is saved.
+
+umps.adminfunc.importantAnnouncement.template=Template
+umps.adminfunc.importantAnnouncement.importAnntSchedule=Important Announcement Schedule
+umps.adminfunc.importantAnnouncement.editFreeTextTemplate=Edit Free Text Template
+umps.adminfunc.importantAnnouncement.editFreeTextAnnt=Edit Free Text Announcement
+umps.adminfunc.importantAnnouncement.createSysMainAnnt=Create System Maintenance Announcement
+umps.adminfunc.importantAnnouncement.createFreeTextAnnt=Create Free Text Announcement
+umps.adminfunc.importantAnnouncement.freeTextTemplate=Free Text Template
+umps.adminfunc.importantAnnouncement.freeTextTemplateEditor=Free Text Template Editor
+umps.adminfunc.importantAnnouncement.freeTextTemplateName=Free Text Template Name
+umps.adminfunc.importantAnnouncement.officeRelocation=Office Relocation
+umps.adminfunc.importantAnnouncement.anntType=Announcement Type
+umps.adminfunc.importantAnnouncement.application=Applications
+umps.adminfunc.importantAnnouncement.engContent=English Content
+umps.adminfunc.importantAnnouncement.tradChinContent=Traditoinal Chinese Content
+umps.adminfunc.importantAnnouncement.simpChinContent=Simplified Chinese Content
+umps.adminfunc.importantAnnouncement.importAnntEditor=Important Announcement Editor
+umps.adminfunc.importantAnnouncement.editSysMainAnnt=Edit System Maintenance Announcement
+
+umps.adminfunc.importantAnnouncement.defineAppAffect=Define Application(s) Affected
+umps.adminfunc.importantAnnouncement.editAnntContent=Edit Announcement Content
+umps.adminfunc.importantAnnouncement.currApp=Current Application
+umps.adminfunc.importantAnnouncement.availApp=Available Application
+umps.adminfunc.importantAnnouncement.effectiveFrom=Effective From
+umps.adminfunc.importantAnnouncement.effectiveTo=Effective To
+
+umps.adminfunc.importantAnnouncement.specifiyMainPeriod=Specify Maintenance Period(s)
+umps.adminfunc.importantAnnouncement.specifiyMainTitle=To facilitate the system update, this service will be temporarily suspended during the following period(s). 
+umps.adminfunc.importantAnnouncement.specifiyMainOption1=If you need assistance, you can call the Immigration e-Services Hotline at (852) 3128 8668 between 7 am and 11 pm (HK Time) daily. 
+umps.adminfunc.importantAnnouncement.specifiyMainOption2=During the suspension period, you can still make/change/cancel/enquire an appointment via the 24-hour telephone booking system at (852) 2598 0888. 
+umps.adminfunc.importantAnnouncement.specifiyMainOption3=If you need assistance, you can call the Immigration e-Services Hotline at (852) 3128 8668 between 7 am and 11 pm (HK Time) daily.
+umps.adminfunc.importantAnnouncement.specifiyMainOption4=During the suspension period, you can still make/change/cancel/enquire an appointment via the 24-hour telephone booking system at (852) 3102 3883. 
+umps.adminfunc.importantAnnouncement.specifiyMainOption5=If you need assistance, you can call the Immigration e-Services Hotline at (852) 3128 8668 between 7 am and 11 pm (HK Time) daily. 
+umps.adminfunc.importantAnnouncement.specifiyMainOption6=None.
+umps.adminfunc.importantAnnouncement.specifiyMainNote1=(Note: for both online services and telephone appointment booking services (if applicable)) 
+umps.adminfunc.importantAnnouncement.specifiyMainNote4=(Note: blank for PAR registration and enquiry) 
+umps.adminfunc.importantAnnouncement.specifiyEffectDateRange=Specify Effective Date-time Range 
 
 
