ADD: Important Announcement Free Text Announcement

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -3,6 +3,7 @@ umps.adminfunc.common.cancel=Cancel
 umps.adminfunc.common.create=Create
 umps.adminfunc.common.confirm=Confirm
 umps.adminfunc.common.update=Update
+umps.adminfunc.common.load=Load
 umps.adminfunc.common.back=Back
 umps.adminfunc.common.backtoeditconfig=Back to Edit Configuration
 umps.adminfunc.common.backToSearchCriteria=Back to Search Criteria
