DB: Added SYSTEM_PARAM table ADD: IVRS

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -203,6 +203,7 @@ umps.adminfunc.deleteAppointment.tdExample=(e.g. T/D No: XY123456, Enter XY12345
 umps.adminfunc.deleteAppointment.arnExample=(e.g. latest ARN: ABCD-1234567-12, Enter ABCD123456712)
 umps.adminfunc.deleteAppointment.deleteSuccess=Appointments have been deleted successfully
 
+umps.adminfunc.ivrs.updated=The IVRS had be updated.
 
 umps.adminfunc.importantAnnouncement.backToImportantAnnt=Back to Important Announcement
 umps.adminfunc.importantAnnouncement.templateSaved=The Template had be saved.
