--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -106,6 +106,7 @@ umps.adminfunc.surgecontrol.footer.clawback.title=Clawback
 umps.adminfunc.surgecontrol.footer.clawback.message=Retrieve tickets from applications with lower priority when the share ticket pool is full
 
 umps.adminfunc.surgecontrol.main.search.title=Search Criteria
+umps.adminfunc.surgecontrol.main.search.result=Search Result
 umps.adminfunc.surgecontrol.main.search.btn=Search
 umps.adminfunc.surgecontrol.main.appid=App ID
 umps.adminfunc.surgecontrol.main.gst=GST
