Changes for Redmine 63067 - Create Function Group

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -52,6 +52,7 @@ umps.adminfunc.func.eservices2.maintenance.ivrs=IVRS
 umps.adminfunc.func.eservices2.management.createfuncgroup=Create Function Group
 umps.adminfunc.func.eservices2.management.updatefuncgroup=Update Function Group
 umps.adminfunc.func.eservices2.management.deletefuncgroup=Delete Function Group
+umps.adminfunc.func.eservices2.management.createnewfuncgroup=Create New Function Group
 
 umps.adminfunc.func.eservices2.management.func.funcGroupId=Function Group ID
 umps.adminfunc.func.eservices2.management.func.description=Description
